# libfranka

./: .gitignore  check_trajectory.cpp
data/circle_trajectory/: circle_trajectory.csv  visual_circle_trajectory.py
data/circle_trajectory_cartesian/: circle_trajectory_data_cartesian.csv  plot_compare_pos.py
data/circle_trajectory_impedance/: circle_trajectory_data_impedance.csv  plot_compare_pos.py
data/move_to_mujoco_keyframe_circle_record/: data_compare_ee.py  data_compare_qpos.py  data_plot_acc.py  data_plot_pos.py  data_plot_vel.py  data_visulize_torques.py  data_visulize_velocity.py  trajectory_data.csv
data/move_to_mujoco_keyframe_full_dynamics_impedance_record/: data_compare_qpos.py  data_visual_torque.py  data_visual_torque_command_vs_measured.py  data_visual_torque_feedforward_impedance.py  data_visual_torque_impedance.py  data_visual_torque_k_d.py  data_visual_velocity.py  debug_new.py  trajectory_data.csv
data/move_to_mujoco_keyframe_polynomial_record/: data_visulize_angles_compare.py  data_visulize_torque.py  data_visulize_velocity.py  trajectory_data.csv
examples/: ._示例说明.md  CMakeLists.txt  CoordinateTransform.cpp  Untitled  generate_circle_trajectory.cpp  move_ee_cartesian.cpp  move_to_mujoco_keyframe_circle.cpp  move_to_mujoco_keyframe_circle_cartesian.cpp  move_to_mujoco_keyframe_circle_impedance.cpp  move_to_mujoco_keyframe_circle_impedance_record.cpp  move_to_mujoco_keyframe_circle_trajectory.cpp  move_to_mujoco_keyframe_full_dynamics_impedance.cpp  move_to_mujoco_keyframe_full_dynamics_impedance1.cpp  move_to_mujoco_keyframe_full_dynamics_impedance2.cpp  move_to_mujoco_keyframe_full_dynamics_impedance3.cpp  move_to_mujoco_keyframe_p2p.cpp  move_to_mujoco_keyframe_polynomial.cpp  move_to_mujoco_keyframe_polynomial_record.cpp  print_qpos_now.cpp  trajectory_data.csv  示例说明.md
include/franka/: CoordinateTransform.h  circle_trajectory.h  quintic_polynomial.h
mujoco-simulation/: main.py  plot_data.py
mujoco-simulation/data/: joint_positions.csv  joint_torques.csv
mujoco-simulation/franka_emika_panda/: panda_nohand.xml
mujoco-simulation/src/: Polynomial_traj.py
